--- a/project-name/package.json
+++ b/project-name/package.json
@@ -21,13 +21,16 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.4.1",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.4.1",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.4.1",
     "@nestjs/swagger": "^7.4.0",
     "@nestjs/typeorm": "^10.0.2",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
@@ -40,6 +43,7 @@
     "@nestjs/testing": "^10.4.1",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
+    "@types/multer": "^1.4.11",
     "@types/node": "18.15.11",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
